src/parser2.peg
Result = _ l:List _
 	{
    	let time = 0;
        const notes = [];
        for (const note of l) {
			const newNote = { ...note, time };
            if (note.offset) {
            	newNote.time += note.offset;
                delete newNote.offset;
            }
            notes.push(newNote);
            time += note.time;
        }
        const endTime = time;
        // Wrapping each note into the cycle below is `t % endTime`, which is
        // NaN when the cycle has no length -- and a NaN time reaches Rust as
        // JSON `null`, which serde refuses, which rejects the whole config push
        // and silently freezes the audio thread at its last good settings.
        // Erroring here instead leaves the field red with its last good value,
        // the same as any other syntax error, for the same reason the repeat
        // count below 1 does: `end: 0` is a shape nothing downstream survives.
        if (!(endTime > 0) || !isFinite(endTime)) {
        	error("a rhythm needs a length above zero");
        }
        // A rest takes its time and then is not there. Removed *here*, after
        // the span has been accumulated over every note, so `1 r, 1` is a
        // two-beat cycle with one hit in it rather than a one-beat cycle.
        //
        // Removed in the grammar rather than at each call site because there
        // are five of those and everything downstream then gets it for free:
        // nothing is sent to Rust (whose `Note` carries only `time`, so serde
        // dropped the flag and the rest *sounded*), no grid line is drawn at
        // a rest, and no dot appears on the rhythm strip. The suffix `r` is
        // not the prefix `r`, which is the ride.
        const sounded = notes.filter((n) => !n.rest);
        // Every note a rest is a rhythm with no notes, and `beat_bisect`
        // answers a list shorter than two with its default one-beat cycle --
        // so silence would come back as a hit on every beat, which is the
        // loudest possible way to be wrong. Refused here, like a zero-length
        // span and a repeat count below one: red field, last good value kept.
        // Turning the voice off is what silence is for.
        if (!sounded.length) {
        	error("a rhythm needs at least one note that is not a rest");
        }
        for (let i = 0; i < sounded.length; i++) {
        	sounded[i].time = (sounded[i].time % endTime + endTime) % endTime;
            if (!isFinite(sounded[i].time)) {
            	error("a note landed at no time in particular");
            }
            delete sounded[i].rest;
        }
        sounded.sort((a, b) => a.time - b.time);
    	return { notes: sounded, start: 0, end: endTime };
    }

List
     = head: Note _ "," _ tail:List ","? { return [head, ...tail]}
     / head: Range _ "," _ tail: List      ","?	{ return [...head, ...tail] }
     / head: Squish _ "," _ tail: List     ","? { return [...head, ...tail] }
     / head: Repeat _ "," _ tail: List     ","? { return [...head, ...tail] }
     / r:Range
     / s:Squish
     / rep:Repeat
     / n:Note 							{ return [n] }
     / g:Group 						{ return g }

// A bracketed group on its own. Factored out of Squish so that a repeat can
// stand in the same place a group does.
Group
    = "[" _ l:List _ ","? _ "]" { return l; }

// `[k 1, h 1]x4` -- the group again, end to end, four times. Rounds a
// fractional count rather than rejecting it, matching parseNumberList: a
// parameter sweep passes through 3.5 on its way somewhere useful, and a field
// that flashes red at every intermediate value is unusable.
// Squish takes `(Repeat / Group)`, so `[k 1, h 1]x4:1` repeats *then* squishes
// the whole run into one beat.
Repeat
    = g:(Group) _ "x"i _ n:Expression
    {
      const count = Math.round(n);
      // A count of 0 would give an empty rhythm with end 0, which nothing
      // downstream is written to survive -- this grammar could not produce one
      // before. Erroring puts the field in the same state as any other syntax
      // error: red, not applied, last good value kept.
      if (!(count >= 1)) error("repeat count must be at least 1");
      const res = [];
      for (let i = 0; i < count; i++) {
        for (const note of g) res.push({ ...note });
      }
      return res;
    }

Squish
    = list:(Repeat / Group) _ ":" space:Expression
    { const s = space / list.reduce((sum,n) => sum + n.time, 0);
      const res = [];
      for (const note of list) {
      	const newNote = { ...note };
        newNote.time *= s;
        if (newNote.offset) {
        	newNote.offset *= s;
        }
        res.push(newNote);
      }
	  return res;
    }

Range
	= n:Expression _ ":" _ d:Expression
     { return [...new Array(n)].map((_, i) => ({ time: d / n})) }

Note
    = ds: DrumSounds? e:Expression post:(_ PostModifier)*  {
		const mods = post.reduce((acc, m) => ({ ...acc, ...m[1]}), {});
    	return { time: e, ...mods, ...(ds ? { sounds : ds.sounds } : null) };
    }

DrumSounds
    = head:DrumSound + tail:(_ "+" _ DrumSound)*
	{ return { sounds: [...head, ...tail.map(i => i[3])] } }

DrumSound
	= "k" / "s" / "h" / "r"

PostModifier
	= _ "r" _ { return { rest: true }; }
    / _ ">" _ n:Expression { return { offset: n }; }

Expression
  = head:Term tail:(_ ("+" / "-") _ Term)* {
      return tail.reduce(function(result, element) {
        if (element[1] === "+") { return result + element[3]; }
        if (element[1] === "-") { return result - element[3]; }
      }, head);
    }

Term
  = head:Factor tail:(_ ("*" / "/") _ Factor)* {
      return tail.reduce(function(result, element) {
        if (element[1] === "*") { return result * element[3]; }
        if (element[1] === "/") { return result / element[3]; }
      }, head);
    }

Factor
  = "(" _ expr:Expression _ ")" { return expr; }
  / Number

Number = Float / Integer

Float "float"
  = _ [-]? [0-9]* "." [0-9]+ { return parseFloat(text(), 10); }

Integer "integer"
  = _ [-]? [0-9]+ { return parseInt(text(), 10); }

_ "whitespace"
  = [ \t\n\r]*
